# frankensqlite

./: .gitignore  .rchignore  AGENTS.md  CHANGELOG.md  Cargo.toml  HEADS_UP_CONNECTION_RS_WIP.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROPOSED_BEADS_2026-05-19.import.sh  PROPOSED_BEADS_2026-05-19.md  README.md  leapfrog_exit_criteria.toml  package.json  parity_taxonomy.toml  progress_bd-1333e.md  progress_bd-1sf8n.md  progress_bd-1x82v.md  progress_bd-3wop3.1.2.md  runtime_stub_inventory.toml
.beads/: .gitignore
.cargo/: config.toml
.github/workflows/: concurrent-platform-matrix.yml  fsqlite-wasm-ci.yml  semver-check.yml  verification-gates.yml  windows-vfs-interop.yml
artifacts/bd-1rw/: evidence_manifest.json
crates/fsqlite-core/: Cargo.toml  FUSED_ENTRY_TICKET_DESIGN.md
crates/fsqlite-core/benches/: prepared_cache_hot_paths.rs  symbol_ops.rs
crates/fsqlite-core/src/: bench_test.rs  commit_marker.rs  commit_repair.rs  compat_persist.rs  connection.rs  db_fec.rs  epoch.rs  lib.rs  policy_controller.rs  raptorq_codec.rs  raptorq_integration.rs  region.rs  remote_effects.rs  replication_receiver.rs  replication_sender.rs  snapshot_shipping.rs  tiered_storage.rs  time_travel_history.rs  vacuum.rs  wal_adapter.rs
crates/fsqlite-core/src/connection/: pragma_maintenance.rs
crates/fsqlite-core/tests/: agent_swarm_coordination_test_matrix_contract.rs  agent_swarm_explain_concurrency_contract.rs  agent_swarm_fallback_transparency_contract.rs  agent_swarm_lease_contract.rs  agent_swarm_queue_claim_contract.rs  agent_swarm_worker_range_contract.rs  b4_query_row_indexed_equality.rs  beads_rebuild_fresh_lookup.rs  cache_staleness_cross_txn_regression.rs  codegen_gap_probe.rs  conformance_oracle_alter_table.rs  conformance_oracle_ext.rs  conformance_oracle_json_paths.rs  conformance_oracle_s55.rs  conformance_oracle_s74b.rs  conformance_oracle_s79.rs  conformance_oracle_s80.rs  conformance_oracle_s82.rs  conformance_oracle_s83.rs  conformance_oracle_type_affinity.rs  core_sql_rusqlite_conformance.rs  differential_proptest.rs  fast_path_separation.rs  in_exists_regression.rs  insert_select_returning_conformance.rs  planner_sqlite_stat1.rs  prepared_hit_rate_proof.rs  prepared_pragma_dispatch.rs  self_connection_read_your_own_write.rs  statement_cache_invalidation.rs  strict_multi_process.rs  track_w_gate.rs  union_view_root_page_collision.rs  update_multicolumn_set_conformance.rs  v2_superinstruction_tests.rs
crates/fsqlite-func/: Cargo.toml
crates/fsqlite-func/src/: agg_builtins.rs  builtins.rs  collation.rs  datetime.rs  lib.rs  math.rs  scalar.rs  vtab.rs  window_builtins.rs
crates/fsqlite-pager/: Cargo.toml  RECLAMATION_PROOF_PACK.md
crates/fsqlite-pager/src/: arc_cache.rs  encrypt.rs  evalue_eviction.rs  fault_hooks.rs  journal.rs  lib.rs  page_buf.rs  page_cache.rs  pager.rs  s3_fifo.rs  submodular_prefetch.rs  thompson_partitioner.rs  traits.rs
crates/fsqlite-pager/tests/: self_alloc_extension_not_conflict.rs
crates/fsqlite-planner/: Cargo.toml
crates/fsqlite-planner/artifacts/bd-1as.4/: planner_index_selection_e2e_artifact.json
crates/fsqlite-planner/benches/: oltp_cost_estimation_hot_paths.rs  plan_cache_hot_paths.rs
crates/fsqlite-planner/src/: codegen.rs  decision_contract.rs  differential.rs  lib.rs  stats.rs
crates/fsqlite-planner/tests/: bd_1lsfu_6_decision_contract.rs  golden_decision_contract_snapshots.rs  golden_differential_plan_snapshots.rs  golden_query_plan_snapshots.rs
crates/fsqlite-planner/tests/snapshots/: golden_decision_contract_snapshots__decision_indexed_join.snap  golden_decision_contract_snapshots__decision_single_table_full_scan.snap  golden_differential_plan_snapshots__differential_grouped_aggregate_join.snap  golden_differential_plan_snapshots__differential_rowset_literal_filters.snap  golden_query_plan_snapshots__planner_event_range_scan.snap  golden_query_plan_snapshots__planner_indexed_three_way_join.snap
crates/fsqlite-vfs/: Cargo.toml
crates/fsqlite-vfs/src/: lib.rs  memory.rs  metrics.rs  shm.rs  traits.rs  unix.rs  uring.rs  windows.rs
crates/fsqlite-vfs/tests/: bd_3u7_4_vfs_contract_io_uring_faults.rs
crates/fsqlite-wasm/: Cargo.toml  README.md
crates/fsqlite-wasm/src/: lib.rs
docs/: bench-methodology-concurrent-writers.md  concurrency-contract.md  connection-pooling.md  deadlock-audit-mvcc-pager-20260424.md  perf-a1-memdb-row-values-conclusion.md  perf-mvcc-session-20260424.md
fuzz/: Cargo.toml
scripts/: build_fsqlite_wasm_package.sh  capture_c1_evidence_pack.sh  capture_persistent_phase_pack.sh  ci_integrity_check.sh  ci_taxonomy_gate.sh  ci_xor_merge_guard.sh  deploy.sh  deploy_all.sh  deploy_fix.sh  lint_no_os_threads.sh  perf_regression_gate.sh  pgo_build.sh  verify_bd_073kf_swarm_harness.sh  verify_bd_2nzo8_1_3_fts5_baseline.sh  verify_bd_2yqp6_3_1_corpus_manifest.sh  verify_bd_2yqp6_3_3_feature_coverage_dashboard.sh  verify_bd_2yqp6_6_3_crash_recovery_corruption_matrix.sh  verify_bd_2yqp6_7_5_parity_status_report.sh  verify_bd_2yqp6_7_8_user_parity_workflow.sh  verify_bd_3u7_4_vfs_contract_fault_injection.sh  verify_bd_bolsv_ebr_gc.sh  verify_bd_bpnnx_csqlite_verification.sh  verify_bd_db300_1_6_1_topology_bundle.sh  verify_bd_db300_3_1_batch_wal_append.sh  verify_bd_db300_3_8_10_commit_path_proof_pack.sh  verify_bd_db300_4_1_hot_path_profiles.sh  verify_bd_db300_4_2_1_prepared_artifact_inventory.sh  verify_bd_db300_4_3_2_storage_cursor_scratch.sh  verify_bd_db300_4_3_3_storage_cursor_reset_safety.sh  verify_bd_db300_6_1_1_statement_reuse_distance.sh  verify_bd_db300_6_1_2_first_hit_warmed_hit.sh  verify_bd_db300_7_3_leapfrog_exit_criteria.sh  verify_bd_db300_7_6_4_policy_snapshot_contract.sh  verify_bd_db300_7_7_1_suite_entrypoints.sh  verify_bd_db300_7_7_3_suite_packaging.sh  verify_bd_db300_8_1_1_matched_artifact_packs.sh  verify_bd_v39s2_oltp_bench.sh  verify_bd_wsw3p_concurrent_showcase.sh  verify_bd_zuzb8_wal_integrity.sh  verify_bd_zywqc_15_multithread.sh  (+25 more)
tools/: extract-classification.mjs  generate-dataset.mjs  generate-spec-evolution-sqlite.py  validate-dataset.mjs
(+2938 files in other folders)
