[package]
name = "fsqlite-pager"
version = "0.1.5"
description = "Page cache and journal management"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
native = [
    "encryption",
    "fsqlite-types/native",
    "fsqlite-vfs/native",
    "fsqlite-wal/native",
]
wasm = ["fsqlite-types/wasm", "fsqlite-vfs/wasm", "fsqlite-wal/wasm"]
linux-asupersync-uring = ["fsqlite-vfs/linux-asupersync-uring"]
fault-injection = ["fsqlite-wal/fault-injection"]
encryption = ["dep:argon2", "dep:chacha20poly1305"]
# Bayesian-mixture e-value eviction scoring (IMPL-19 / AAC-P5).
# When enabled, ShardedPageCache records accesses into an EValueEvictor and
# prefers the lowest-e page for eviction. Falls back to the existing policy
# when disabled (compile-out).
evalue-eviction = []

[dependencies]
foldhash = "0.2.0"
smallvec = { version = "1.13.2", features = ["const_generics", "union", "const_new"] }
bumpalo = { version = "3", features = ["collections"] }
fsqlite-types = { path = "../fsqlite-types", version = "0.1.5", default-features = false }
fsqlite-error = { path = "../fsqlite-error", version = "0.1.5" }
fsqlite-observability = { workspace = true }
fsqlite-vfs = { path = "../fsqlite-vfs", version = "0.1.6", default-features = false }
fsqlite-wal = { path = "../fsqlite-wal", version = "0.1.5", default-features = false }
xxhash-rust = { workspace = true }
chacha20poly1305 = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
hashbrown.workspace = true
dashmap.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true }

[dev-dependencies]
asupersync.workspace = true
proptest = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
fsqlite-mvcc = { path = "../fsqlite-mvcc", version = ">=0.1.2, <0.2.0" }
fsqlite-wal = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
