[package]
name = "fsqlite-planner"
version = "0.1.4"
description = "Query planner: name resolution, WHERE analysis, join ordering"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
native = []
wasm = []

[dependencies]
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-ast = { workspace = true }
fsqlite-parser = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
lru = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "plan_cache_hot_paths"
harness = false

[[bench]]
name = "oltp_cost_estimation_hot_paths"
harness = false

[lints]
workspace = true
