[package]
name = "fsqlite-vfs"
version = "0.1.2"
description = "Virtual filesystem abstraction layer"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["linux-asupersync-uring"]
native = ["fsqlite-types/native"]
wasm = ["fsqlite-types/wasm"]
linux-asupersync-uring = ["native", "dep:asupersync", "dep:pollster"]
# Deprecated compatibility toggle; guarded by compile_error in src/uring.rs.
linux-uring-fs = ["native", "dep:uring-fs", "dep:pollster"]

[dependencies]
fsqlite-types = { version = "0.1.1", path = "../fsqlite-types", default-features = false }
fsqlite-error = { workspace = true }
fsqlite-observability = { workspace = true }
asupersync = { workspace = true, optional = true, features = ["io-uring"] }
pollster = { version = "0.4", optional = true }
tracing = { workspace = true }
uring-fs = { version = "1.4.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
advisory-lock = "0.3.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
