[package]
name = "fsqlite-wasm"
version = "0.1.0"
description = "WebAssembly bindings for FrankenSQLite"
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
diagnostics = ["fsqlite-core/diagnostic-pragmas"]
extensions = ["ext-json", "ext-fts5", "ext-icu", "ext-misc", "ext-rtree"]
ext-json = ["fsqlite-core/ext-json"]
ext-fts5 = ["fsqlite-core/ext-fts5"]
ext-icu = ["fsqlite-core/ext-icu"]
ext-misc = ["fsqlite-core/ext-misc"]
ext-rtree = ["fsqlite-core/ext-rtree"]
panic-hook = ["dep:console_error_panic_hook"]
tracing = [
    "dep:tracing-wasm",
    "dep:tracing",
    "fsqlite-core/wasm-tracing-max-level-warn",
    "tracing/release_max_level_warn",
]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
fsqlite-types = { workspace = true }
fsqlite-error = { workspace = true }
fsqlite-vfs = { version = "0.1.5", path = "../fsqlite-vfs", default-features = false, features = ["wasm"] }
fsqlite-ast = { workspace = true }
fsqlite-parser = { workspace = true }
fsqlite-planner = { version = "0.1.3", path = "../fsqlite-planner", default-features = false, features = ["wasm"] }
fsqlite-func = { workspace = true }
fsqlite-pager = { version = "0.1.3", path = "../fsqlite-pager", default-features = false, features = ["wasm"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "linux"))'.dependencies]
fsqlite-core = { version = "0.1.3", path = "../fsqlite-core", default-features = false, features = ["linux-asupersync-uring"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "linux")))'.dependencies]
fsqlite-core = { version = "0.1.3", path = "../fsqlite-core", default-features = false, features = ["native"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
fsqlite-core = { version = "0.1.3", path = "../fsqlite-core", default-features = false, features = ["wasm"] }
tracing = { workspace = true, optional = true, features = ["release_max_level_error"] }
tracing-wasm = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen-test = "0.3"

[lints]
workspace = true
